Removed options for usable rules.